<resources>
    <string name="app_name">DEVployedApp</string>
    <string name="filters">Filters</string>
    <string name="back_arrow_button">Back arrow button.</string>
    <string name="profile_page">Profile page.</string>
    <string name="profile_page_content">Profile page content</string>
    <string name="janedoe_gmail_com">janedoe@gmail.com</string>
    <string name="profilepic">ProfilePic</string>
    <string name="_123_456_7890">(123) 456&#8211;7890</string>
    <string name="skills_label">Skills</string>
    <string name="experience_label">Experience and Education</string>
    <string name="add_skill_button">+</string>
    <string name="my_new_skill">     </string>
    <string name="chip_freelance">Freelance</string>
    <string name="companyNameFragmentPiece">Company: </string>
    <string name="my_profile">My Profile</string>
    <string name="apply">Apply</string>
    <string name="reject">Reject</string>
    <string name="saved_jobs">Saved Jobs</string>
    <string name="exitapplicationbutton">exitApplicationButton</string>
    <string name="rejected_jobs">Rejected Jobs</string>
    <string name="MainActivity_page_title">Job Matches</string>
    <string name="ProfilePage_page_title">My Profile</string>
    <string name="SavedJobsPage_page_title">Saved Jobs</string>
    <string name="RejectedJobsPage_page_title">Rejected Jobs</string>
    <string name="menu_drawer_open">Drawer Open</string>
    <string name="menu_drawer_close">Drawer Close</string>
JobCardBlowUpInterface_KL
    <string name="closeWindow" />
    <string name="companyLogo" />
    <string name="pass">Pass</string>
    <string name="company_logo_string">Company logo</string>
    <string name="i_e_agile_development_oop_java_etc">i.e. Agile Development, OOP, Java, etc.</string>
    <string name="jane_doe">Jane Doe</string>
    <string name="my_skills">My Skills</string>
    <string name="add_a_new_skill">Add a new skill.</string>
    <string name="your_previous_educational_experience_level">Your previous educational experience level</string>
    <string name="educational_experience">Educational Experience</string>
    <string name="completed_high_school">Completed High School.</string>
    <string name="high_school">High School</string>
    <string name="completed_an_associate_s_degree">Completed an associate\'s degree.</string>
    <string name="associate_s">Associate\'s</string>
    <string name="completed_a_bachelor_s_degree">Completed a bachelor\'s degree.</string>
    <string name="bachelor_s">Bachelor\'s</string>
    <string name="completed_a_master_s_degree">Completed a master\'s degree.</string>
    <string name="master_s">Master\'s</string>
    <string name="completed_a_doctorate_degree">Completed a doctorate degree.</string>
    <string name="phd">PhD</string>
    <string name="completed_a_coding_bootcamp_or_equivalent_program">Completed a coding bootcamp or equivalent program.</string>
    <string name="coding_bootcamp">Coding Bootcamp</string>
    <string name="experience_level">Experience Level</string>
    <string name="no_previous_industry_experience">No previous industry experience.</string>
    <string name="no_experience">No Experience</string>
    <string name="_0_1_years_of_industry_experience">0-1 years of industry experience.</string>
    <string name="early_career">Early Career</string>
    <string name="mid_career_2_5_years_experience">Mid Career (2-5 years experience).</string>
    <string name="mid_career">Mid Career</string>
    <string name="senior_level_in_your_career_5_years_experience">Senior level in your career (5+ years experience).</string>
    <string name="senior_level">Senior Level</string>
    <string name="held_an_executive_position">Held an executive position.</string>
    <string name="executive">Executive</string>
    <string name="industry_preferences">Industry Preferences</string>
    <string name="software_development_engineering">Software development (engineering)</string>
    <string name="software_development">Software Development</string>
    <string name="it_filed_information_technology">IT filed (information technology)</string>
    <string name="it">IT</string>
    <string name="front_end_development">Front-end development.</string>
    <string name="front_end">Front End</string>
    <string name="back_end_development">Back-end development.</string>
    <string name="back_end">Back End</string>
    <string name="works_both_front_end_and_back_end_development">Works both front-end and back-end development.</string>
    <string name="full_stack">Full Stack</string>
    <string name="user_experience_and_user_interface">User experience and user interface</string>
    <string name="ux_ui">UX/UI</string>
    <string name="gaming_software_development">Gaming software development.</string>
    <string name="game_development">Game Development</string>
    <string name="save">Save</string>

    <string-array name="company_names">
        <item>Google</item>
        <item>Microsoft</item>
        <item>Apple</item>
        <item>YouTube</item>
        <item>AWS</item>
        <item>Cisco</item>
        <item>Another Tech Co</item>
    </string-array>
    <string-array name="job_titles">
        <item>Software Engineer</item>
        <item>Front-End Engineer</item>
        <item>Back-End Engineer</item>
        <item>Full-Stack Developer</item>
        <item>Systems Manager</item>
        <item>IT Specialist</item>
        <item>Fancy Job Title</item>
    </string-array>
    <string-array name="skills_to_match">
        <item>C++</item>
        <item>C#</item>
        <item>Ruby</item>
        <item>Python</item>
        <item>Java</item>
        <item>CSS</item>
        <item>HTML</item>
    </string-array>
</resources>